# gaussino-with-adept-analysis

./: .dvcignore  .gitignore  README.md  dvc.yaml  install.sh  params.yaml  pyproject.toml  setup.sh
.dvc/: config
B2ChamberTracker/: run_config.json  test_runs.dvc
B2ChamberTracker/configs/: adept_simulation.py  geant4_simulation.py  options.py
B4LayeredCalorimeter/: .gitignore  run_config.json  test_runs.dvc
B4LayeredCalorimeter/configs/: adept_simulation.py  geant4_simulation.py  options.py
CaloChallenge/: run_config.json  test_runs.dvc
CaloChallenge/configs/: adept_simulation.py  geant4_simulation.py  generation.py  monitoring.py
benchmarks/b2_chamber_tracker/: adept_simulation.py  geant4_simulation.py  generation.py  geometry.py
benchmarks/b4_layered_calorimeter/: adept_simulation.py  export_geometry.py  geant4_simulation.py  generation.py  geometry.py  monitoring.py
benchmarks/calo_challenge/: generation.py  geometry.py
notebooks/: b2_chamber_tracker.py  b4_layered_calorimeter_analysis.py  scratchpad.py
results/calo_challenge--2024-10-04/: Gaussino-10ev-20241004-histos-no-adept.root  Gaussino-10ev-20241004-histos.root
results/gaussino_B2a--2024-10-01--run_1/: Gaussino-10ev-20241002-histos.root  stats.txt
results/gaussino_B2a--2025-01-29/: adept-10ev-1.csv  adept-10ev-10.csv  adept-10ev-100.csv  adept-10ev-1000.csv  adept-10ev-10000.csv  (+2 more)
scripts/: result_extractor.py  run_simulation.py  runner.py
tests/: test_cli.py  test_extract_report_smoke.py  test_extract_report_unit.py  test_params.py  test_run_id.py  test_simulate.py  test_units.py
(+1118 files in other folders)
